Fixed bugs that caused improper rendering and scrolling on mobile devices.

--- a/src/styles/_background.scss
+++ b/src/styles/_background.scss
@@ -14,6 +14,7 @@
   z-index: -999;
   top: 0px;
   filter: blur(1px) brightness(95%);
+  overflow: hidden;
 
   .grid-wrapper {
     position: absolute;
