--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -8,6 +8,8 @@
 
   h1 {
     color: $primaryCool;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 3px;
   }
   input {
     margin: 20px;
