--- a/src/styles/_skills.scss
+++ b/src/styles/_skills.scss
@@ -9,6 +9,9 @@ $reverse: false;
   h1 {
     color: $primaryCool;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 3px;
+    padding: 10px;
   }
 }
 
